# C-Homework-3

./: README.md
assignment-3/: CMakeLists.txt  Explanations and Report.docx  README.md  benchmark.hpp  benchmark_example.cpp  dining-philosophers.cpp  sieve-of-eratosthenes.cpp  sorted_list.hpp  sorted_list2.hpp
assignment-3/build-debug/: CMakeCache.txt  Makefile  bench  cmake_install.cmake  dining-philosophers  sieve-of-eratosthenes
